# fasttmi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
.github/workflows/: test.yml
fast_tmi/: config.py  database.py  main.py  models.py
fast_tmi/api/routes/: api.py  root.py  user.py
migrations/: env.py
migrations/versions/: 58526c90f092_initial_settings.py
scripts/: commit-msg-hook.py  git-hook.sh  start-dev.sh
tests/: conftest.py  test_user.py
