[tool.poetry]
name = "fasttmi"
version = "0.1.0"
description = ""
authors = ["kmlee78 <jaoming787@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
alembic = "^1.7.7"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.36"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.982"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
